Match swagger path operationIds and express route functions
