# lib/controllers/Controller.js
@@ -3,76 +3,60 @@ const swaggerUi = require('swagger-ui-express');
 const LocalDataHelper = require('../helper/LocalDataHelper');
 const swaggerDocument = require('../swagger.json');
 
-function fetchMenu(locationParam, dayParam) {
-  let locationTag;
-
+function getLocationTagFromParam(locationParam) {
   switch (locationParam) {
     case 'uni':
-      locationTag = LocalDataHelper.LOCATION_UNI;
-      break;
+      return LocalDataHelper.LOCATION_UNI;
+
     case 'oth':
-      locationTag = LocalDataHelper.LOCATION_OTH;
-      break;
+      return LocalDataHelper.LOCATION_OTH;
 
     case 'oth-abend':
-      locationTag = LocalDataHelper.LOCATION_OTH_ABEND;
-      break;
+      return LocalDataHelper.LOCATION_OTH_ABEND;
 
     case 'pruefening':
-      locationTag = LocalDataHelper.LOCATION_PRUEFENING;
-      break;
+      return LocalDataHelper.LOCATION_PRUEFENING;
 
     default:
-      throw new Error(`Invalid location param: ${locationParam}`);
-  }
-
-  const fetchedMenu = LocalDataHelper.getCachedMenu(locationTag);
-  if (dayParam === 'today') {
-    dayParam = new Date().toLocaleString('en-US', { weekday: 'long' }).toLocaleLowerCase();
-  }
-
-  // console.log(`fetchMenu: dayParam=${dayParam} locationParam=${locationParam}`);
-  return (dayParam ? fetchedMenu.filter(item => item.day === dayParam) : fetchedMenu);
-}
-
-function ingredients(req, res) {
-  console.log('GET', req.params);
-
-  const ingredientsArray = LocalDataHelper.getIngredients();
-  if (req.params.key) {
-    const ingredientKey = req.params.key;
-
-    try {
-      const specificIngredient = ingredientsArray.filter(ingredient => ingredientKey === ingredient.key)[0];
-      if (specificIngredient) {
-        res.status(200).json(specificIngredient);
-      } else {
-        throw new Error(`Invalid key param: ${ingredientKey}`);
-      }
-    } catch (err) {
-      console.error(err);
-      res.status(400);
-    }
-  }
-
-  res.status(200).json(ingredientsArray);
-}
-
-function menu(req, res) {
-  console.log('GET', req.params);
-
-  try {
-    const fetchedMenu = fetchMenu(req.params.location, req.params.day);
-    res.status(200).json(fetchedMenu);
-  } catch (err) {
-    res.status(200).json({
-      message: 'No data available, mensa may be closed.',
-    });
+      return undefined;
   }
 }
 
-function toDocs(req, res) {
-  res.redirect(301, '/api-docs');
+function getDayValFromParam(dayParam) {
+  return dayParam === 'today' ? new Date().toLocaleString('en-US', { weekday: 'long' }).toLocaleLowerCase() : dayParam;
+}
+
+function getIngredients(request, response) {
+  const data = LocalDataHelper.getIngredients();
+  response.status(200).json(data);
+}
+
+function getIngredientsForKey(request, response) {
+  const [key] = [request.params.key];
+
+  const data = LocalDataHelper.getIngredients().find(ingredient => ingredient.key === key);
+  response.status(200).json(data);
+}
+
+function getMenuForLocation(request, response) {
+  const [location] = [request.params.location];
+  const locationTag = getLocationTagFromParam(location);
+
+  const data = LocalDataHelper.getCachedMenu(locationTag);
+  response.status(200).json(data);
+}
+
+function getMenuForLocationOnDay(request, response) {
+  const [location, day] = [request.params.location, request.params.day];
+  const locationTag = getLocationTagFromParam(location);
+  const dayVal = getDayValFromParam(day);
+
+  const data = LocalDataHelper.getCachedMenu(locationTag).filter(item => item.day === dayVal);
+  response.status(200).json(data);
+}
+
+function toDocs(request, response) {
+  response.redirect(301, '/api-docs');
 }
 
 function addRoutes(app) {
@@ -84,16 +68,16 @@ function addRoutes(app) {
     .get(toDocs);
 
   app.route('/ingredients')
-    .get(ingredients);
+    .get(getIngredients);
 
   app.route('/ingredients/:key')
-    .get(ingredients);
+    .get(getIngredientsForKey);
 
   app.route('/mensa/:location(uni|oth|oth-evening|pruefening)')
-    .get(menu);
+    .get(getMenuForLocation);
 
   app.route('/mensa/:location(uni|oth|oth-evening|pruefening)/:day(monday|tuesday|wednesday|thursday|friday|saturday|sunday|today)')
-    .get(menu);
+    .get(getMenuForLocationOnDay);
 }
 
 module.exports = addRoutes;
