# lib/swagger.json
@@ -1,247 +1,231 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "description": "A json-wrapper around the inofficial API for different canteens of the university (and university of applied sciences) in Regensburg, germany.",
-      "version": "1.4.0",
-      "title": "Regensburg Mensa API",
-      "contact": {
-        "email": "lukas@wolfsteiner.de"
-      },
-      "license": {
-        "name": "WTFPL",
-        "url": "https://github.com/dotWee/rgb-mensa_api/blob/master/LICENSE"
-      }
+  "swagger": "2.0",
+  "info": {
+    "description": "A json-wrapper around the inofficial API for different canteens of the university (and university of applied sciences) in Regensburg, germany.",
+    "version": "1.4.0",
+    "title": "Regensburg Mensa API",
+    "contact": {
+      "email": "lukas@wolfsteiner.de"
     },
-    "basePath": "/",
-    "tags": [
-      {
-        "name": "Menu",
-        "description": "Menu of a specific canteen"
-      },
-      {
-        "name": "Ingredients",
-        "description": "Possible ingredients for menu items"
-      }
-    ],
-    "schemes": [
-      "https",
-      "http"
-    ],
-    "paths": {
-      "/ingredients": {
-        "get": {
-          "tags": [
-            "Ingredients"
-          ],
-          "summary": "Get a list of possible ingredients",
-          "description": "Returns a list of possible ingredients",
-          "operationId": "getIngredients",
-          "produces": [
-            "application/json"
-          ],
-          "parameters": [
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful operation",
-              "schema": {
-                "$ref": "#/definitions/Ingredients"
-              }
-            }
-          }
-        }
-      },
-      "/ingredients/{key}": {
-        "get": {
-          "tags": [
-            "Ingredients"
-          ],
-          "summary": "Get ingredient matching the given key",
-          "description": "Returns ingredient matching the given key",
-          "operationId": "getIngredientsForKey",
-          "produces": [
-            "application/json"
-          ],
-          "parameters": [
-            {
-              "name": "key",
-              "in": "path",
-              "description": "Key of an ingredient",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful operation",
-              "schema": {
-                "$ref": "#/definitions/Ingredient"
-              }
-            },
-            "400": {
-              "description": "Invalid ingredient key supplied"
-            }
-          }
-        }
-      },
-      "/mensa/{location}": {
-        "get": {
-          "tags": [
-            "Menu"
-          ],
-          "summary": "Get menu of a given canteen",
-          "description": "Returns a menu of givien canteen",
-          "operationId": "getMenuOfLocation",
-          "produces": [
-            "application/json"
-          ],
-          "parameters": [
-            {
-              "name": "location",
-              "in": "path",
-              "description": "Name of a supported canteen",
-              "required": true,
-              "type": "string",
-              "enum": [
-                "uni",
-                "oth",
-                "oth-evening",
-                "pruefening"
-              ]
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful operation",
-              "schema": {
-                "$ref": "#/definitions/Menu"
-              }
-            },
-            "400": {
-              "description": "Invalid location supplied"
-            }
-          }
-        }
-      },
-      "/mensa/{location}/{day}": {
-        "get": {
-          "tags": [
-            "Menu"
-          ],
-          "summary": "Get menu of a given canteen on specific weekday",
-          "description": "Returns menu of given canteen on specific weekday",
-          "operationId": "getMenuOfLocationForDay",
-          "produces": [
-            "application/json"
-          ],
-          "parameters": [
-            {
-              "name": "location",
-              "in": "path",
-              "description": "Name of a supported canteen",
-              "required": true,
-              "type": "string",
-              "enum": [
-                "uni",
-                "oth",
-                "oth-evening",
-                "pruefening"
-              ]
-            },
-            {
-              "name": "day",
-              "in": "path",
-              "description": "Weekday",
-              "required": true,
-              "type": "string",
-              "enum": [
-                "monday",
-                "tuesday",
-                "wednesday",
-                "thursday",
-                "friday",
-                "saturday",
-                "sunday",
-                "today"
-              ]
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful operation",
-              "schema": {
-                "$ref": "#/definitions/Menu"
-              }
-            },
-            "400": {
-              "description": "Invalid location supplied"
+    "license": {
+      "name": "WTFPL",
+      "url": "https://github.com/dotWee/rgb-mensa_api/blob/master/LICENSE"
+    }
+  },
+  "basePath": "/",
+  "tags": [{
+      "name": "Menu",
+      "description": "Menu of a specific canteen"
+    },
+    {
+      "name": "Ingredients",
+      "description": "Possible ingredients for menu items"
+    }
+  ],
+  "schemes": [
+    "https",
+    "http"
+  ],
+  "paths": {
+    "/ingredients": {
+      "get": {
+        "tags": [
+          "Ingredients"
+        ],
+        "summary": "Get a list of possible ingredients",
+        "description": "Returns a list of possible ingredients",
+        "operationId": "getIngredients",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": {
+              "$ref": "#/definitions/Ingredients"
             }
           }
         }
       }
     },
-    "definitions": {
-      "Ingredient": {
-        "type": "object",
-        "properties": {
-          "key": {
-            "type": "string",
-            "example": "G"
-          },
-          "value": {
-            "type": "string",
-            "example": "Milch und Milchprodukte"
-          }
-        }
-      },
-      "Ingredients": {
-        "type": "array",
-        "items": {
-          "$ref": "#/definitions/Ingredient"
-        }
-      },
-      "Item": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string",
-            "example": "Hähnchenbrustfilet mit Pfefferrahm und Minirösti"
-          },
-          "date": {
-            "type": "string",
-            "example": "10.09.2018"
-          },
-          "day": {
-            "type": "string",
-            "example": "monday"
-          },
-          "category": {
-            "type": "string",
-            "example": "HG1"
-          },
-          "labels": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "ingredients": {
-            "type": "array",
-            "items": {
+    "/ingredients/{key}": {
+      "get": {
+        "tags": [
+          "Ingredients"
+        ],
+        "summary": "Get ingredient matching the supplied key",
+        "description": "Returns ingredient matching the supplied key",
+        "operationId": "getIngredientsForKey",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [{
+          "name": "key",
+          "in": "path",
+          "description": "Key of an ingredient",
+          "required": true,
+          "type": "string"
+        }],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": {
               "$ref": "#/definitions/Ingredient"
             }
           }
         }
-      },
-      "Menu": {
-        "type": "array",
-        "items": {
-          "$ref": "#/definitions/Item"
+      }
+    },
+    "/mensa/{location}": {
+      "get": {
+        "tags": [
+          "Menu"
+        ],
+        "summary": "Get menu of a supplied canteen",
+        "description": "Returns a menu of givien canteen",
+        "operationId": "getMenuForLocation",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [{
+          "name": "location",
+          "in": "path",
+          "description": "Name of a supported canteen",
+          "required": true,
+          "type": "string",
+          "enum": [
+            "uni",
+            "oth",
+            "oth-evening",
+            "pruefening"
+          ]
+        }],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": {
+              "$ref": "#/definitions/Menu"
+            }
+          }
         }
       }
     },
-    "externalDocs": {
-      "description": "Source code",
-      "url": "https://github.com/dotWee/rgb-mensa_api"
+    "/mensa/{location}/{day}": {
+      "get": {
+        "tags": [
+          "Menu"
+        ],
+        "summary": "Get menu of a supplied canteen on specific weekday",
+        "description": "Returns menu of supplied canteen on specific weekday",
+        "operationId": "getMenuForLocationOnDay",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [{
+            "name": "location",
+            "in": "path",
+            "description": "Name of a supported canteen",
+            "required": true,
+            "type": "string",
+            "enum": [
+              "uni",
+              "oth",
+              "oth-evening",
+              "pruefening"
+            ]
+          },
+          {
+            "name": "day",
+            "in": "path",
+            "description": "Weekday",
+            "required": true,
+            "type": "string",
+            "enum": [
+              "monday",
+              "tuesday",
+              "wednesday",
+              "thursday",
+              "friday",
+              "saturday",
+              "sunday",
+              "today"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": {
+              "$ref": "#/definitions/Menu"
+            }
+          }
+        }
+      }
     }
+  },
+  "definitions": {
+    "Ingredient": {
+      "type": "object",
+      "properties": {
+        "key": {
+          "type": "string",
+          "example": "G"
+        },
+        "value": {
+          "type": "string",
+          "example": "Milch und Milchprodukte"
+        }
+      }
+    },
+    "Ingredients": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/Ingredient"
+      }
+    },
+    "Item": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Hähnchenbrustfilet mit Pfefferrahm und Minirösti"
+        },
+        "date": {
+          "type": "string",
+          "example": "10.09.2018"
+        },
+        "day": {
+          "type": "string",
+          "example": "monday"
+        },
+        "category": {
+          "type": "string",
+          "example": "HG1"
+        },
+        "labels": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "ingredients": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Ingredient"
+          }
+        }
+      }
+    },
+    "Menu": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/Item"
+      }
+    }
+  },
+  "externalDocs": {
+    "description": "Source code",
+    "url": "https://github.com/dotWee/rgb-mensa_api"
   }
+}
